// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Build themer feature > Apply theme > md2html with theme yaml 1`] = `
"[
  ".yfm",
  "_assets/style/_theme.css",
  "_bundle/search-async-0",
  "_bundle/934.js",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/latex-extension.css",
  "_bundle/latex-extension.js",
  "_bundle/mermaid-extension.js",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search/index.js",
  "_bundle/search/langs/ar.js",
  "_bundle/search/langs/da.js",
  "_bundle/search/langs/de.js",
  "_bundle/search/langs/du.js",
  "_bundle/search/langs/el.js",
  "_bundle/search/langs/es.js",
  "_bundle/search/langs/fi.js",
  "_bundle/search/langs/fr.js",
  "_bundle/search/langs/he.js",
  "_bundle/search/langs/hi.js",
  "_bundle/search/langs/hu.js",
  "_bundle/search/langs/hy.js",
  "_bundle/search/langs/index.js",
  "_bundle/search/langs/it.js",
  "_bundle/search/langs/ja.js",
  "_bundle/search/langs/jp.js",
  "_bundle/search/langs/kn.js",
  "_bundle/search/langs/ko.js",
  "_bundle/search/langs/nl.js",
  "_bundle/search/langs/no.js",
  "_bundle/search/langs/pt.js",
  "_bundle/search/langs/ro.js",
  "_bundle/search/langs/ru.js",
  "_bundle/search/langs/sa.js",
  "_bundle/search/langs/sv.js",
  "_bundle/search/langs/ta.js",
  "_bundle/search/langs/te.js",
  "_bundle/search/langs/th.js",
  "_bundle/search/langs/tr.js",
  "_bundle/search/langs/vi.js",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 2`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 3`] = `
".g-root {
    --g-color-base-brand: rgb(94 33 41);
}

.g-root_theme_light {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-private-brand-150: rgb(94 33 41 / 0.2);
    --g-color-private-brand-200: rgb(94 33 41 / 0.3);
    --g-color-private-brand-250: rgb(94 33 41 / 0.4);
    --g-color-private-brand-300: rgb(94 33 41 / 0.5);
    --g-color-private-brand-350: rgb(94 33 41 / 0.6);
    --g-color-private-brand-400: rgb(94 33 41 / 0.7);
    --g-color-private-brand-450: rgb(94 33 41 / 0.8);
    --g-color-private-brand-500: rgb(94 33 41 / 0.9);
    --g-color-private-brand-550-solid: rgb(94 33 41);
    --g-color-private-brand-1000-solid: rgb(52 42 50);
    --g-color-private-brand-950-solid: rgb(55 42 49);
    --g-color-private-brand-900-solid: rgb(60 41 48);
    --g-color-private-brand-850-solid: rgb(65 40 47);
    --g-color-private-brand-800-solid: rgb(70 39 46);
    --g-color-private-brand-750-solid: rgb(74 37 45);
    --g-color-private-brand-700-solid: rgb(79 36 44);
    --g-color-private-brand-650-solid: rgb(84 35 43);
    --g-color-private-brand-600-solid: rgb(89 34 42);
    --g-color-private-brand-500-solid: rgb(89 34 42);
    --g-color-private-brand-450-solid: rgb(84 35 43);
    --g-color-private-brand-400-solid: rgb(79 36 44);
    --g-color-private-brand-350-solid: rgb(74 37 45);
    --g-color-private-brand-300-solid: rgb(70 39 46);
    --g-color-private-brand-250-solid: rgb(65 40 47);
    --g-color-private-brand-200-solid: rgb(60 41 48);
    --g-color-private-brand-150-solid: rgb(55 42 49);
    --g-color-private-brand-100-solid: rgb(52 42 50);
    --g-color-private-brand-50-solid: rgb(50 43 50);
    --g-color-base-brand: rgb(94 33 41);
    --g-color-base-background: rgb(255,255,255);
    --g-color-base-brand-hover: var(--g-color-private-brand-650-solid);
    --g-color-base-selection: var(--g-color-private-brand-150);
    --g-color-base-selection-hover: var(--g-color-private-brand-300);
    --g-color-text-link: var(--g-color-private-brand-700-solid);
    --g-color-text-link-hover: var(--g-color-private-brand-850-solid);
    --g-color-text-brand: rgb(0, 255, 0);
    --g-color-text-brand-heavy: var(--g-color-private-brand-850-solid);
    --g-color-line-brand: var(--g-color-private-brand-550-solid);
}

.g-root_theme_dark {
    --g-color-private-brand-50: rgb(255 255 0 / 0.1);
    --g-color-private-brand-100: rgb(255 255 0 / 0.15);
    --g-color-private-brand-150: rgb(255 255 0 / 0.2);
    --g-color-private-brand-200: rgb(255 255 0 / 0.3);
    --g-color-private-brand-250: rgb(255 255 0 / 0.4);
    --g-color-private-brand-300: rgb(255 255 0 / 0.5);
    --g-color-private-brand-350: rgb(255 255 0 / 0.6);
    --g-color-private-brand-400: rgb(255 255 0 / 0.7);
    --g-color-private-brand-450: rgb(255 255 0 / 0.8);
    --g-color-private-brand-500: rgb(255 255 0 / 0.9);
    --g-color-private-brand-550-solid: rgb(255 255 0);
    --g-color-private-brand-1000-solid: rgb(255 255 217);
    --g-color-private-brand-950-solid: rgb(255 255 204);
    --g-color-private-brand-900-solid: rgb(255 255 179);
    --g-color-private-brand-850-solid: rgb(255 255 153);
    --g-color-private-brand-800-solid: rgb(255 255 128);
    --g-color-private-brand-750-solid: rgb(255 255 102);
    --g-color-private-brand-700-solid: rgb(255 255 77);
    --g-color-private-brand-650-solid: rgb(255 255 51);
    --g-color-private-brand-600-solid: rgb(255 255 25);
    --g-color-private-brand-500-solid: rgb(255 255 25);
    --g-color-private-brand-450-solid: rgb(255 255 51);
    --g-color-private-brand-400-solid: rgb(255 255 77);
    --g-color-private-brand-350-solid: rgb(255 255 102);
    --g-color-private-brand-300-solid: rgb(255 255 128);
    --g-color-private-brand-250-solid: rgb(255 255 153);
    --g-color-private-brand-200-solid: rgb(255 255 179);
    --g-color-private-brand-150-solid: rgb(255 255 204);
    --g-color-private-brand-100-solid: rgb(255 255 217);
    --g-color-private-brand-50-solid: rgb(255 255 230);
    --g-color-base-brand: yellow;
    --g-color-base-background: rgb(45, 44, 51);
    --g-color-base-brand-hover: var(--g-color-private-brand-650-solid);
    --g-color-base-selection: var(--g-color-private-brand-150);
    --g-color-base-selection-hover: var(--g-color-private-brand-300);
    --g-color-text-link: var(--g-color-private-brand-600-solid);
    --g-color-text-link-hover: var(--g-color-private-brand-850-solid);
    --g-color-text-brand: var(--g-color-private-brand-600-solid);
    --g-color-text-brand-heavy: var(--g-color-private-brand-850-solid);
    --g-color-line-brand: var(--g-color-private-brand-550-solid);
}

.g-root_theme_dark .yfm {
    --yfm-color-note-info-background: blue;
}

"
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 4`] = `
"
        <!DOCTYPE html>
        <html lang="ru" dir="ltr">
            <head>
                <meta charset="utf-8">
                <base href="./" />
                <meta name="title" content="Documentation"  />
<meta name="noIndex" content="true"  />

                
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <title>Documentation | Documentation</title>
                <style type="text/css">
                    body {
                        height: 100vh;
                    }
                </style>
                <link type="text/css" rel="stylesheet" href="_bundle/search-css-0" />
<link type="text/css" rel="stylesheet" href="_bundle/app-css-1" />
                
                <link rel="stylesheet" type="text/css" href="_assets/style/_theme.css" id="custom-style">
            </head>
            <body class="g-root g-root_theme_light">
                <div id="root"></div>
                <script type="application/javascript">
                   window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/_theme.css"],"script":[],"csp":[]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":["_assets/style/_theme.css"],"script":[],"csp":[]},"title":"Documentation","leading":true},"router":{"pathname":"index","depth":1},"lang":"ru","langs":["ru"]};
                </script>
                <script src="toc.js" type="application/javascript"></script>
                
                <script type="application/javascript" src="_bundle/search-js-0"></script>
<script type="application/javascript" src="_bundle/app-js-1"></script>
<script type="application/javascript" src="_bundle/search-js-2"></script>
            </body>
        </html>
    "
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 5`] = `
"
        <!DOCTYPE html>
        <html lang="ru" dir="ltr">
            <head>
                <meta charset="utf-8">
                <base href="./" />
                <meta name="yfm" content="builder"  />

                
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <title>Documentation</title>
                <style type="text/css">
                    body {
                        height: 100vh;
                    }
                </style>
                <link type="text/css" rel="stylesheet" href="_bundle/search-css-0" />
<link type="text/css" rel="stylesheet" href="_bundle/app-css-1" />
                
                <link rel="stylesheet" type="text/css" href="_assets/style/_theme.css" id="custom-style">
            </head>
            <body class="g-root g-root_theme_light">
                <div id="root"></div>
                <script type="application/javascript">
                   window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[{"name":"yfm","content":"builder"}],"style":["_assets/style/_theme.css"],"script":[],"csp":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>/n","leading":false},"router":{"pathname":"page","depth":1},"lang":"ru","langs":["ru"]};
                </script>
                <script src="toc.js" type="application/javascript"></script>
                
                <script type="application/javascript" src="_bundle/search-js-0"></script>
<script type="application/javascript" src="_bundle/app-js-1"></script>
<script type="application/javascript" src="_bundle/search-js-2"></script>
            </body>
        </html>
    "
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 6`] = `
"
        <!DOCTYPE html>
        <html lang="ru" dir="ltr">
            <head>
                <meta charset="utf-8">
                <base href="../" />
                
                
                <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <title>Documentation</title>
                <style type="text/css">
                    body {
                        height: 100vh;
                    }
                </style>
                <link type="text/css" rel="stylesheet" href="_bundle/search-css-0" />
<link type="text/css" rel="stylesheet" href="_bundle/app-css-1" />
                
                <link rel="stylesheet" type="text/css" href="_assets/style/_theme.css" id="custom-style">
            </head>
            <body class="g-root g-root_theme_light">
                <div id="root"></div>
                <script type="application/javascript">
                   window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"meta":{"metadata":[],"style":["_assets/style/_theme.css"],"script":[],"csp":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"<p>Lorem</p>/n","leading":false},"router":{"pathname":"project/config","depth":2},"lang":"ru","langs":["ru"]};
                </script>
                <script src="toc.js" type="application/javascript"></script>
                
                <script type="application/javascript" src="_bundle/search-js-0"></script>
<script type="application/javascript" src="_bundle/app-js-1"></script>
<script type="application/javascript" src="_bundle/search-js-2"></script>
            </body>
        </html>
    "
`;

exports[`Build themer feature > Apply theme > md2html with theme yaml 7`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"id":"UUID"};"`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 1`] = `
"[
  ".yfm",
  "_assets/style/_theme.css",
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 2`] = `
"resources:
  style:
    - _assets/style/test.css
  script:
    - _assets/script/test1.js
"
`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 3`] = `
".g-root {
    --g-color-base-brand: rgb(94 33 41);
}

.g-root_theme_light {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-private-brand-150: rgb(94 33 41 / 0.2);
    --g-color-private-brand-200: rgb(94 33 41 / 0.3);
    --g-color-private-brand-250: rgb(94 33 41 / 0.4);
    --g-color-private-brand-300: rgb(94 33 41 / 0.5);
    --g-color-private-brand-350: rgb(94 33 41 / 0.6);
    --g-color-private-brand-400: rgb(94 33 41 / 0.7);
    --g-color-private-brand-450: rgb(94 33 41 / 0.8);
    --g-color-private-brand-500: rgb(94 33 41 / 0.9);
    --g-color-private-brand-550-solid: rgb(94 33 41);
    --g-color-private-brand-1000-solid: rgb(52 42 50);
    --g-color-private-brand-950-solid: rgb(55 42 49);
    --g-color-private-brand-900-solid: rgb(60 41 48);
    --g-color-private-brand-850-solid: rgb(65 40 47);
    --g-color-private-brand-800-solid: rgb(70 39 46);
    --g-color-private-brand-750-solid: rgb(74 37 45);
    --g-color-private-brand-700-solid: rgb(79 36 44);
    --g-color-private-brand-650-solid: rgb(84 35 43);
    --g-color-private-brand-600-solid: rgb(89 34 42);
    --g-color-private-brand-500-solid: rgb(89 34 42);
    --g-color-private-brand-450-solid: rgb(84 35 43);
    --g-color-private-brand-400-solid: rgb(79 36 44);
    --g-color-private-brand-350-solid: rgb(74 37 45);
    --g-color-private-brand-300-solid: rgb(70 39 46);
    --g-color-private-brand-250-solid: rgb(65 40 47);
    --g-color-private-brand-200-solid: rgb(60 41 48);
    --g-color-private-brand-150-solid: rgb(55 42 49);
    --g-color-private-brand-100-solid: rgb(52 42 50);
    --g-color-private-brand-50-solid: rgb(50 43 50);
    --g-color-base-brand: rgb(94 33 41);
    --g-color-base-background: rgb(255,255,255);
    --g-color-base-brand-hover: var(--g-color-private-brand-650-solid);
    --g-color-base-selection: var(--g-color-private-brand-150);
    --g-color-base-selection-hover: var(--g-color-private-brand-300);
    --g-color-text-link: var(--g-color-private-brand-700-solid);
    --g-color-text-link-hover: var(--g-color-private-brand-850-solid);
    --g-color-text-brand: rgb(0, 255, 0);
    --g-color-text-brand-heavy: var(--g-color-private-brand-850-solid);
    --g-color-line-brand: var(--g-color-private-brand-550-solid);
}

.g-root_theme_dark {
    --g-color-private-brand-50: rgb(255 255 0 / 0.1);
    --g-color-private-brand-100: rgb(255 255 0 / 0.15);
    --g-color-private-brand-150: rgb(255 255 0 / 0.2);
    --g-color-private-brand-200: rgb(255 255 0 / 0.3);
    --g-color-private-brand-250: rgb(255 255 0 / 0.4);
    --g-color-private-brand-300: rgb(255 255 0 / 0.5);
    --g-color-private-brand-350: rgb(255 255 0 / 0.6);
    --g-color-private-brand-400: rgb(255 255 0 / 0.7);
    --g-color-private-brand-450: rgb(255 255 0 / 0.8);
    --g-color-private-brand-500: rgb(255 255 0 / 0.9);
    --g-color-private-brand-550-solid: rgb(255 255 0);
    --g-color-private-brand-1000-solid: rgb(255 255 217);
    --g-color-private-brand-950-solid: rgb(255 255 204);
    --g-color-private-brand-900-solid: rgb(255 255 179);
    --g-color-private-brand-850-solid: rgb(255 255 153);
    --g-color-private-brand-800-solid: rgb(255 255 128);
    --g-color-private-brand-750-solid: rgb(255 255 102);
    --g-color-private-brand-700-solid: rgb(255 255 77);
    --g-color-private-brand-650-solid: rgb(255 255 51);
    --g-color-private-brand-600-solid: rgb(255 255 25);
    --g-color-private-brand-500-solid: rgb(255 255 25);
    --g-color-private-brand-450-solid: rgb(255 255 51);
    --g-color-private-brand-400-solid: rgb(255 255 77);
    --g-color-private-brand-350-solid: rgb(255 255 102);
    --g-color-private-brand-300-solid: rgb(255 255 128);
    --g-color-private-brand-250-solid: rgb(255 255 153);
    --g-color-private-brand-200-solid: rgb(255 255 179);
    --g-color-private-brand-150-solid: rgb(255 255 204);
    --g-color-private-brand-100-solid: rgb(255 255 217);
    --g-color-private-brand-50-solid: rgb(255 255 230);
    --g-color-base-brand: yellow;
    --g-color-base-background: rgb(45, 44, 51);
    --g-color-base-brand-hover: var(--g-color-private-brand-650-solid);
    --g-color-base-selection: var(--g-color-private-brand-150);
    --g-color-base-selection-hover: var(--g-color-private-brand-300);
    --g-color-text-link: var(--g-color-private-brand-600-solid);
    --g-color-text-link-hover: var(--g-color-private-brand-850-solid);
    --g-color-text-brand: var(--g-color-private-brand-600-solid);
    --g-color-text-brand-heavy: var(--g-color-private-brand-850-solid);
    --g-color-line-brand: var(--g-color-private-brand-550-solid);
}

.g-root_theme_dark .yfm {
    --yfm-color-note-info-background: blue;
}

"
`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 4`] = `
"title: Documentation
description: ''
meta:
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 5`] = `
"---
metadata:
  - name: yfm
    content: builder
---

Lorem
"
`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 6`] = `"Lorem"`;

exports[`Build themer feature > Apply theme > md2md with theme yaml 7`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
"
`;

exports[`Build themer feature > create css > Create base css 1`] = `
".g-root {
    --g-color-base-brand: rgb(94 33 41);
}

.yfm {
    --yfm-color-note-tip-background: rgb(106, 90, 205);
}

"
`;

exports[`Build themer feature > create css > Create dark css 1`] = `
".g-root_theme_light {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-base-brand: rgb(220, 48, 232);
    --g-color-base-background: rgb(255,255,255);
}

"
`;

exports[`Build themer feature > create css > Create full css 1`] = `
".g-root {
    --g-color-base-brand: rgb(94 33 41);
}

.yfm {
    --yfm-color-note-tip-background: rgb(106, 90, 205);
}

.g-root_theme_light {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-base-brand: rgb(48, 149, 232);
    --g-color-base-background: rgb(255,255,255);
}

.g-root_theme_dark {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-base-brand: rgb(58, 228, 143);
    --g-color-base-background: rgb(45, 44, 51);
}

"
`;

exports[`Build themer feature > create css > Create light css 1`] = `
".g-root_theme_light {
    --g-color-private-brand-50: rgb(94 33 41 / 0.1);
    --g-color-private-brand-100: rgb(94 33 41 / 0.15);
    --g-color-base-brand: rgb(48, 149, 232);
    --g-color-base-background: rgb(255,255,255);
}

"
`;
